# sample-cd-repacker

./: .gitignore  LICENSE  README.md  classify.py  install.sh  pyproject.toml  repack_interactive.zsh
Formula/: sample-cd-repacker.rb
homebrew-audio-tools/: README.md
homebrew-audio-tools/Formula/: samplem.rb
samplem-ui/: index.html  package-lock.json  package.json
samplem-ui/src/: main.ts  styles.css
samplem-ui/src-tauri/: Cargo.toml  tauri.conf.json
samplem-ui/src-tauri/icons/: icon.icns
samplem-ui/src-tauri/src/: main.rs
swiftui/: README.md  project.yml
swiftui/Resources/: Info.plist
swiftui/Samplem.xcodeproj/: project.pbxproj
swiftui/Sources/: App.swift  ContentView.swift
